--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-228.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-220.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-427.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-302.8KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-225.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.02MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-449.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-317.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇬🇧 英国-352.4KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
   - {name: 🇸🇬 新加坡-1.56MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-302.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
