--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-228.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-352.4KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇨🇳 中国-225.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.40MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-271.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-345.8KB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
-  - {name: 🇨🇳 中国-427.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-649.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇦🇺 澳大利亚-419.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇦 加拿大-3.30MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-382.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇻🇳 越南-6.75MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-6.22MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-309.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-309.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-331.4KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-561.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇺🇸 美国-515.4KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-649.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-419.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-649.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-419.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-649.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-419.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-649.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-419.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-649.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-419.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-649.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-419.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-649.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-419.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
