--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-4.58MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: 7ec57bc9-5cd5-4adf-a640-369458d7b27e, sni: 625tw.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-402.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇭🇰 香港-3.46MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-271.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇭🇰 香港-291.9KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: da8e0008-3c2b-4363-b582-0d9a981cebea, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-456.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇬🇧 英国-561.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇺🇸 美国-515.4KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-822.3KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-309.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇻🇳 越南-6.36MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-208.5KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-248.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-311.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-561.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
